team_ws/MinGeun-SMG/limo_fire_py/log/build_2025-12-05_16-58-10/limo_fire_py/stdout_stderr.log
running egg_info
writing build/limo_fire_py/limo_fire_py.egg-info/PKG-INFO
writing dependency_links to build/limo_fire_py/limo_fire_py.egg-info/dependency_links.txt
writing entry points to build/limo_fire_py/limo_fire_py.egg-info/entry_points.txt
writing requirements to build/limo_fire_py/limo_fire_py.egg-info/requires.txt
writing top-level names to build/limo_fire_py/limo_fire_py.egg-info/top_level.txt
reading manifest file 'build/limo_fire_py/limo_fire_py.egg-info/SOURCES.txt'
writing manifest file 'build/limo_fire_py/limo_fire_py.egg-info/SOURCES.txt'
running build
running build_py
copying limo_fire_py/fire_sensor_reader.py -> /home/wego/team_ws/MinGeun-SMG/limo_fire_py-main/build/limo_fire_py/build/lib/limo_fire_py
running install
running install_lib
copying /home/wego/team_ws/MinGeun-SMG/limo_fire_py-main/build/limo_fire_py/build/lib/limo_fire_py/fire_sensor_reader.py -> /home/wego/team_ws/MinGeun-SMG/limo_fire_py-main/install/limo_fire_py/lib/python3.10/site-packages/limo_fire_py
byte-compiling /home/wego/team_ws/MinGeun-SMG/limo_fire_py-main/install/limo_fire_py/lib/python3.10/site-packages/limo_fire_py/fire_sensor_reader.py to fire_sensor_reader.cpython-310.pyc
  File "/home/wego/team_ws/MinGeun-SMG/limo_fire_py-main/install/limo_fire_py/lib/python3.10/site-packages/limo_fire_py/fire_sensor_reader.py", line 97
    except UnicodeDecodeError as e:
    ^^^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/wego/team_ws/MinGeun-SMG/limo_fire_py-main/install/limo_fire_py/lib/python3.10/site-packages/limo_fire_py-0.0.0-py3.10.egg-info' (and everything under it)
Copying build/limo_fire_py/limo_fire_py.egg-info to /home/wego/team_ws/MinGeun-SMG/limo_fire_py-main/install/limo_fire_py/lib/python3.10/site-packages/limo_fire_py-0.0.0-py3.10.egg-info
running install_scripts
Installing bt_runner script to /home/wego/team_ws/MinGeun-SMG/limo_fire_py-main/install/limo_fire_py/lib/limo_fire_py
Installing bt_visualizer script to /home/wego/team_ws/MinGeun-SMG/limo_fire_py-main/install/limo_fire_py/lib/limo_fire_py
Installing fire_alarm_notifier script to /home/wego/team_ws/MinGeun-SMG/limo_fire_py-main/install/limo_fire_py/lib/limo_fire_py
Installing fire_safety_controller script to /home/wego/team_ws/MinGeun-SMG/limo_fire_py-main/install/limo_fire_py/lib/limo_fire_py
Installing fire_sensor_publisher script to /home/wego/team_ws/MinGeun-SMG/limo_fire_py-main/install/limo_fire_py/lib/limo_fire_py
Installing fire_sensor_reader script to /home/wego/team_ws/MinGeun-SMG/limo_fire_py-main/install/limo_fire_py/lib/limo_fire_py
Installing pygame_visualizer script to /home/wego/team_ws/MinGeun-SMG/limo_fire_py-main/install/limo_fire_py/lib/limo_fire_py
writing list of installed files to '/home/wego/team_ws/MinGeun-SMG/limo_fire_py-main/build/limo_fire_py/install.log'
